--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 ZippyId.xcworkspace/xcuserdata
 ZippyIdSDK/ZippyIdSDK.xcodeproj/xcuserdata
 ZippyIdSDKDemo/ZippyIdSDKDemo.xcodeproj/xcuserdata
+ZippyIdSDKDemo/Pods
+ZippyIdSDKDemo/ZippyIdSDKDemo.xcworkspace/xcuserdata
