Remove user config

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ ZippyIdSDK/ZippyIdSDK.xcodeproj/xcuserdata
 ZippyIdSDKDemo/ZippyIdSDKDemo.xcodeproj/xcuserdata
 ZippyIdSDKDemo/Pods
 ZippyIdSDKDemo/ZippyIdSDKDemo.xcworkspace/xcuserdata
+ZippyIdSDK/ZippyIdSDK.xcodeproj/project.xcworkspace/xcuserdata
